[project]
name = "pystac-monty-docs"
version = "0.0.0"
description = "This package is only for uv, so it can share a lockfile with the top-level project. It should never be published"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.39",
    "ipython>=8.28.0",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "rasterio>=1.4.1",
    "shapely>=2.0.6",
]
